--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 [Oo]bj/
 [Bb]uild/
 [Bb]uilds/
-[Ll]ogs/
+\[Ll]ogs\
 [Uu]ser[Ss]ettings/
 
 # MemoryCaptures can get excessive in size.
@@ -69,3 +69,4 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+*.log
